WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285450
[iOS] DOM nodes can be leaked when searching for text in Safari
https://bugs.webkit.org/show_bug.cgi?id=285450
Summary
[iOS] DOM nodes can be leaked when searching for text in Safari
Aditya Keerthi
Reported
2025-01-06 11:53:13 PST
rdar://133689631
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2025-01-06 12:07:00 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38584
EWS
Comment 2
2025-01-06 21:58:34 PST
Committed
288505@main
(c40691a5705e): <
https://commits.webkit.org/288505@main
> Reviewed commits have been landed. Closing PR #38584 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug